fix layout issue on Safari

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -20,7 +20,7 @@ $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 // Breakpoints
-$desktop-breakpoint: 45rem;
+$desktop-breakpoint: 768px;
 
 
 // CSS Variables
